Social media Integration - Introduction 1st Draft

--- a/references.bib
+++ b/references.bib
@@ -440,6 +440,23 @@
   Timestamp                = {2015.10.08}
 }
 
+@Article{Kaplan201059,
+  Title                    = {Users of the world, unite! The challenges and opportunities of Social Media },
+  Author                   = {Andreas M. Kaplan and Michael Haenlein},
+  Journal                  = {Business Horizons },
+  Year                     = {2010},
+  Number                   = {1},
+  Pages                    = {59 - 68},
+  Volume                   = {53},
+
+  Doi                      = {http://dx.doi.org/10.1016/j.bushor.2009.09.003},
+  ISSN                     = {0007-6813},
+  Keywords                 = {Social Media},
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.09},
+  Url                      = {http://www.sciencedirect.com/science/article/pii/S0007681309001232}
+}
+
 @Article{landsteinerABO,
   Title                    = {Zur Kenntnis der antifermentativen, lytischen und agglutinierenden Wirkungen des Blutserums und der Lymphe},
   Author                   = {Karl Landsteiner},
