--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -54,7 +54,7 @@
 				\end{itemize}
 
 	\subsection{Gamification}
-		Το gamification (παιχνιδοποιήση) ορίζεται ως "η ενσωμάτωση διάφορων πρακτικών και διαδικασιών παιχνιδιού σε καταστάσεις που δεν σχετίζονται με το παιχνίδι με στόχο τη λύση προβλημάτων μέσω της αύξησης της διαδραστικότητας και της συμμετοχής των χρηστών"\cite{Deterding:2011:GDE:2181037.2181040}\cite{Rojas:2013:MPG:2583008.2583033}. Ως εκ τούτου, το gamification έχει βρει χρήση σε ένα ευρύ φάσμα εφαρμογών, από τον χώρο του marketing και της εκπαίδευσης μέχρι και τον χώρο της υγείας \cite{6758978}. Το Gartner έχει εκτιμήσει ότι μέχρι το τέλος του 2015 περισσότερο από το 50\% των επιχειρήσεων θα αξιοποιεί το gamification \cite{gartnerGamification}. Στον ακαδημαϊκό χώρο συναντάμε όλο και περισσότερη έρευνα και δημοσιεύσεις με στόχο να μελετηθεί με μετρήσιμα, αντικειμενικά κριτήρια κατά πόσο είναι αποτελεσματική η χρήση των τεχνικών gamifaction. 
+		Το gamification (παιχνιδοποιήση) ορίζεται ως ``η ενσωμάτωση διάφορων πρακτικών και διαδικασιών παιχνιδιού σε καταστάσεις που δεν σχετίζονται με το παιχνίδι με στόχο τη λύση προβλημάτων μέσω της αύξησης της διαδραστικότητας και της συμμετοχής των χρηστών"\cite{Deterding:2011:GDE:2181037.2181040}\cite{Rojas:2013:MPG:2583008.2583033}. Ως εκ τούτου, το gamification έχει βρει χρήση σε ένα ευρύ φάσμα εφαρμογών, από τον χώρο του marketing και της εκπαίδευσης μέχρι και τον χώρο της υγείας \cite{6758978}. Το Gartner έχει εκτιμήσει ότι μέχρι το τέλος του 2015 περισσότερο από το 50\% των επιχειρήσεων θα αξιοποιεί το gamification \cite{gartnerGamification}. Στον ακαδημαϊκό χώρο συναντάμε όλο και περισσότερη έρευνα και δημοσιεύσεις με στόχο να μελετηθεί με μετρήσιμα, αντικειμενικά κριτήρια κατά πόσο είναι αποτελεσματική η χρήση των τεχνικών gamifaction. 
 
 	\subsubsection{Δομικά στοιχεία}
 	Ένα παιχνίδι αποτελείται από έξι δομικά στοιχεία, όπως παρουσιάζονται στο σχήμα \ref{fig:gamification_components}.
@@ -198,11 +198,20 @@
 	Κρίνεται σκόπιμο να αναφερθεί ότι οι πόντοι κατανέμονται με βάση την βαρύτητα της δραστηριότητας που εκτελεί ο εθελοντής αιμοδότης.
 	
 	\subsubsection{Πίνακες κατάταξης}
-	Οι πίνακες κατάταξης δείχνουν την επίδοση και την "πρόοδο" ενός χρήστη σε σχέση με αυτή των "φίλων" τους \cite{Liu:2011:GIE:2072652.2072655}. Υπάρχει ένας ενιαίος πίνακας στον οποίο και θα υπάρχουν όλοι οι εθελοντές που χρησιμοποιούν το σύστημα, εφόσον έχουν δηλώσει ότι επιθυμούν να συμμετέχουν στην κατάταξη. Ενώ υπάρχει και ένας δεύτερος πίνακας που δημιουργείται δυναμικά για κάθε χρήστη και περιλαμβάνει μόνο άτομα τα οποία ακολουθεί. Η κατάταξη διαμορφώνεται με βάση τους πόντους εμπειρίας που έχει μαζέψει κάθε χρήστης, οι οποίοι περιγράφηκαν παραπάνω. Για τους πρώτους στον κεντρικό πίνακα κατάταξης  θα υπάρχει μέριμνα για κάποια ειδική επιβράβευση, ανάλογα τις συμφωνίες και χορηγίες που υπάρχουν με εταιρείες στα πλαίσια της κοινωνικής ευθύνης.
+	Οι πίνακες κατάταξης δείχνουν την επίδοση και την `πρόοδο' ενός χρήστη σε σχέση με αυτή των `φίλων' τους \cite{Liu:2011:GIE:2072652.2072655}. Υπάρχει ένας ενιαίος πίνακας στον οποίο και θα υπάρχουν όλοι οι εθελοντές που χρησιμοποιούν το σύστημα, εφόσον έχουν δηλώσει ότι επιθυμούν να συμμετέχουν στην κατάταξη. Ενώ υπάρχει και ένας δεύτερος πίνακας που δημιουργείται δυναμικά για κάθε χρήστη και περιλαμβάνει μόνο άτομα τα οποία ακολουθεί. Η κατάταξη διαμορφώνεται με βάση τους πόντους εμπειρίας που έχει μαζέψει κάθε χρήστης, οι οποίοι περιγράφηκαν παραπάνω. Για τους πρώτους στον κεντρικό πίνακα κατάταξης  θα υπάρχει μέριμνα για κάποια ειδική επιβράβευση, ανάλογα τις συμφωνίες και χορηγίες που υπάρχουν με εταιρείες στα πλαίσια της κοινωνικής ευθύνης.
 	
 	\subsubsection{Συμπέρασμα}
 	Συμπερασματικά το σύστημα που περιγράψαμε παραπάνω μπορεί να βοηθήσει σημαντικά στον δεύτερο στόχο που θέσαμε στην εισαγωγή της διπλωματικής, στην ενότητα \ref{sec:intro_goals}, δηλαδή στην διατήρηση και επιπλέον ενεργοποίηση των εθελοντών αιμοδοτών. Για την επίτευξη του πρώτου στόχου που θέσαμε δηλαδή την στρατολόγηση περισσότερων νέων εθελοντών θεωρούμε πως μεγάλο ρόλο μπορεί να παίξει ο συνδυασμός του gamification με τα κοινωνικά δίκτυα όπως περιγράφουμε στην επόμενη ενότητα.
 	\subsection{Social Networking Integration}
+	Ο όρος κοινωνικά δίκτυα (social media), αποτελεί μια γενική έννοια που χρησιμοποιείται για να περιγράψει διαδικτυακές εφαρμογές και υπηρεσίες στις οποίες οι χρήστες έχουν την δυνατότητα να δημιουργήσουν και να μοιραστούν μεταξύ τους περιεχόμενο \cite{Kaplan201059}. Τα μέσα κοινωνικής δικτύωσης μπορούν να χωριστούν σε έξι κατηγορίες με βάση τον βαθμό της κοινωνικής παρουσίας που απαιτούν από τον χρήστη:
+	\begin{itemize}
+		\item Ιστολόγια (π.χ Blogger, Tumblr, Wordpress)
+		\item Συνεργατικές ιστοσελίδες (π.χ Wikipedia)
+		\item Μέσα κοινωνικής δικτύωσης (π.χ Facebook)
+		\item Κοινότητες διαμοιρασμού περιεχομένου (π.χ Reddit, Youtube)
+		\item Εικονικοί κόσμοι (π.χ Second Life)
+		\item Εικονικοί κόσμοι παιχνιδιών (π.χ World of Warcraft)
+	\end{itemize}
 	
 \section{UML diagrams - Σενάρια χρήσης  }
 	Η διαδικασία της μοντελοποίησης, δηλαδή ο αναλυτικός σχεδιασμός ενός συστήματος, πριν από την υλοποίηση του είναι ένα πολύ βασικό στάδιο κατά την ανάπτυξη εφαρμογών. Ένα σύστημα μοντελοποιείται επιτυχώς όταν οι λειτουργικότητες του συστήματος έχουν περιγραφεί πλήρως και ορθώς, έχουν καλυφθεί οι ανάγκες των τελικών χρηστών και υποστηρίζεται η επεκτασιμότητα του συστήματος. 
