Social Media 1st Draft

--- a/references.bib
+++ b/references.bib
@@ -32,6 +32,16 @@
   Url                      = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4260297/}
 }
 
+@Book{Benkler2006,
+  Title                    = {The Wealth of Networks},
+  Author                   = {Yochai Benkler},
+  Publisher                = {Yale University Press},
+  Year                     = {2006},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.10}
+}
+
 @Article{Bolton-Maggs2013,
   Title                    = {Transfusion safety in 2012: main messages from the SHOT Annual Report for 2012},
   Author                   = {Bolton-Maggs, P. H. B.},
@@ -284,6 +294,7 @@
 }
 
 @Article{1973,
+  Title                    = {The Gift Relationship: From Human Blood to Social Policy},
   Author                   = {Feingold, Eugene},
   Journal                  = {Medical Care},
   Year                     = {1973},
@@ -688,6 +699,7 @@
 @Article{citeulike:382810,
   Title                    = {MDA: A Formal Approach to Game Design and Game Research},
   Author                   = {Robin, Hunicke and Marc, Leblanc and Robert, Zubek},
+  Journal                  = {AAAI workshop},
   Year                     = {2004},
 
   Abstract                 = {{In this paper we present the MDA framework (standing for Mechanics, Dynamics, and Aesthetics), developed and taught as part of the Game Design and Tuning Workshop at the Game Developers Conference, San Jose 2001-2004.
@@ -719,6 +731,13 @@ MDA is a formal approach to understanding games {\OE} one which attempts to brid
   Location                 = {Toronto, Ontario, Canada},
   Numpages                 = {4},
   Url                      = {http://doi.acm.org/10.1145/2583008.2583033}
+}
+
+@Article{shaver2007impact,
+  Title                    = {Impact of the social media on Consumer Behavior in the United},
+  Author                   = {Shaver, Dan},
+  Journal                  = {University of Central Florida},
+  Year                     = {2007}
 }
 
 @Article{Stainsby01092000,
@@ -794,6 +813,24 @@ URN: urn:nbn:de:0114-fqs0501297},
   Keywords                 = {adverse reactions, haemovigilance, haemovigilance system, hemovigilance, International Haemovigilance Network, quality management, safety management, transfusion reactions},
   Publisher                = {Blackwell Publishing Ltd},
   Url                      = {http://dx.doi.org/10.1111/j.1423-0410.2010.01442.x}
+}
+
+@Article{1974,
+  Title                    = {Consumer Socialization},
+  Author                   = {Ward, Scott},
+  Journal                  = {Journal of Consumer Research},
+  Year                     = {1974},
+  Number                   = {2},
+  Pages                    = {pp. 1-14},
+  Volume                   = {1},
+
+  Abstract                 = {This paper traces the development of interest in consumer socialization. Major policy and conceptual issues are posed, and research in several areas of study is reviewed. Directions for research are specified in three key areas: consumer socialization processes, content of learning, and permanence of early learning.},
+  Copyright                = {Copyright © 1974 Journal of Consumer Research, Inc.},
+  ISSN                     = {00935301},
+  Jstor_formatteddate      = {Sep., 1974},
+  Language                 = {English},
+  Publisher                = {Oxford University Press},
+  Url                      = {http://www.jstor.org/stable/2489100}
 }
 
 @Book{circulatorySystem,
