--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -183,7 +183,7 @@
 	
 	Σε αυτό το σημείο θα πρέπει να αναφέρουμε ότι, έχει αποτελέσει αντικείμενο τεράστιας διαμάχης το κατά πόσο πρέπει να δίνονται φυσικές επιβραβεύσεις στους εθελοντές και κατά πόσο αυτό αφαιρεί το νόημα της εθελοντικής αιμοδοσίας. Στην Ελλάδα μέχρι πρωτινός δεν επιτρεπόντουσαν κίνητρα που θα μπορούσαν να θεωρηθούν αντικαταστατό του χρήματος, αλλά ο πρόσφατος νόμος 4272/2014 άρθρο 27 δίνει την ελευθερία στον Ε.ΚΕ.Α. να ορίσει τέτοιου είδους κίνητρα σε συμφωνία με την οδηγία 2002/98 της Ευρωπαϊκής ένωσης.
 	
-	\subsubsection{Σύστημα πόντων}
+	\subsubsection{Σύστημα πόντων}\label{sssect:point_system}
 	Το σύστημα gamification που εφαρμόζουμε στην εφαρμογή που αναπτύχθηκε στα πλαίσια της παρούσας διπλωματικής περιλαμβάνει ολοκληρωμένο σύστημα πόντων. Ο χρήστης με το που εγγράφεται στο σύστημα λαμβάνει έναν μικρό αριθμό πόντων ως επιβράβευση της εγγραφής του ως εθελοντής αιμοδότης. Οι πόντοι μπορούν αν χωριστούν σε δύο επιμέρους κατηγορίες βάση της χρήσης τους:
 	\begin{itemize}
 		\item \textbf{Πόντοι εξαργύρωσης:} εξαργυρώνονται με σκοπό της απόκτησης κάποιας επιβράβευσης. Ανάλογα με τις δραστηριότητες που επιτελεί κερδίζει πόντους οι οποίοι αθροίζονται. Ενδεικτική λίστα για τις οποίες ο χρήστης θα μπορεί να κερδίζει πόντους:
@@ -202,16 +202,38 @@
 	
 	\subsubsection{Συμπέρασμα}
 	Συμπερασματικά το σύστημα που περιγράψαμε παραπάνω μπορεί να βοηθήσει σημαντικά στον δεύτερο στόχο που θέσαμε στην εισαγωγή της διπλωματικής, στην ενότητα \ref{sec:intro_goals}, δηλαδή στην διατήρηση και επιπλέον ενεργοποίηση των εθελοντών αιμοδοτών. Για την επίτευξη του πρώτου στόχου που θέσαμε δηλαδή την στρατολόγηση περισσότερων νέων εθελοντών θεωρούμε πως μεγάλο ρόλο μπορεί να παίξει ο συνδυασμός του gamification με τα κοινωνικά δίκτυα όπως περιγράφουμε στην επόμενη ενότητα.
+	
 	\subsection{Social Networking Integration}
-	Ο όρος κοινωνικά δίκτυα (social media), αποτελεί μια γενική έννοια που χρησιμοποιείται για να περιγράψει διαδικτυακές εφαρμογές και υπηρεσίες στις οποίες οι χρήστες έχουν την δυνατότητα να δημιουργήσουν και να μοιραστούν μεταξύ τους περιεχόμενο \cite{Kaplan201059}. Τα μέσα κοινωνικής δικτύωσης μπορούν να χωριστούν σε έξι κατηγορίες με βάση τον βαθμό της κοινωνικής παρουσίας που απαιτούν από τον χρήστη:
+	Η θεωρία της κοινωνικοποίησης των καταναλωτών προβλέπει ότι η επικοινωνία μεταξύ των καταναλωτών επηρεάζει την γνωστική και συναισθηματική τους συμπεριφορά, καθώς και τις στάσεις τους απέναντι σε ένα προϊόν ή μια υπηρεσία\cite{1974}. Τα κοινωνικά δίκτυα μπορούν να επηρεάσουν δραστικά την συμπεριφορά ενός ατόμου\cite{shaver2007impact} και οι υπάρχοντες εθελοντές μέσω των κοινωνικών δικτύων, είναι σε θέση να παίξουν τον ρόλο του πρέσβη προσελκύοντας νέους εθελοντές αιμοδότες. Η αξιοποίηση των εθελοντών με στόχο την προαγωγή της εθελοντικής αιμοδοσίας, αποτελεί μια εξαιρετικά αποτελεσματική μέθοδο ``στρατολόγησης" και αύξησης του αριθμού των αιμοδοσιών \cite{Lemmens2008}. Πριν προχωρήσουμε στην ανάλυση των συγκεκριμένων ενεργειών που επιτελέσαμε με αυτό τον σκοπό, κρίνουμε σκόπιμο να αναφέρουμε μερικές εισαγωγικές έννοιες για τα κοινωνικά δίκτυα εν γένει. 	
+	
+	Τα μέσα κοινωνικής δικτύωσης (Social Media), μέσω των οποίων επιτυγχάνεται η ηλεκτρονική κοινωνική δικτύωση, αποτελούν ουσιαστικά απόρροια του Web 2.0, το οποίο κατάφερε να αλλάξει την υφή του διαδικτύου προσδίδοντάς του μια πιο κοινωνική διάσταση. Ο όρος κοινωνικά δίκτυα (social media), αποτελεί μια γενική έννοια που χρησιμοποιείται για να περιγράψει διαδικτυακές εφαρμογές και υπηρεσίες στις οποίες οι χρήστες έχουν την δυνατότητα να δημιουργήσουν και να μοιραστούν μεταξύ τους περιεχόμενο \cite{Kaplan201059}. Τα μέσα κοινωνικής δικτύωσης μπορούν να χωριστούν σε έξι κατηγορίες με βάση τον βαθμό της κοινωνικής παρουσίας που απαιτούν από τον χρήστη:
 	\begin{itemize}
 		\item Ιστολόγια (π.χ Blogger, Tumblr, Wordpress)
-		\item Συνεργατικές ιστοσελίδες (π.χ Wikipedia)
-		\item Μέσα κοινωνικής δικτύωσης (π.χ Facebook)
+		\item Συνεργατικές ιστοσελίδες - έργα (π.χ Wikipedia)
+		\item Ιστοσελίδες κοινωνικής δικτύωσης (π.χ Facebook)
 		\item Κοινότητες διαμοιρασμού περιεχομένου (π.χ Reddit, Youtube)
 		\item Εικονικοί κόσμοι (π.χ Second Life)
 		\item Εικονικοί κόσμοι παιχνιδιών (π.χ World of Warcraft)
 	\end{itemize}
+	
+	Τα μέσα κοινωνικής δικτύωσης βρήκαν τέτοια ευρεία αποδοχή και εδραιώθηκαν στην καθημερινότητα μας γιατί ικανοποιούν μια ισχυρή ανάγκη του ανθρώπου. Την ανάγκη του να συνεταιρίζεται, δημιουργώντας δίκτυα με άλλους ανθρώπους, ανταλλάζοντας ιδέες και απόψεις. Τα κύρια κίνητρα για τη χρήση των μέσων κοινωνικής δικτύωσης είναι τα εξής \cite{Benkler2006}:
+	\begin{itemize}
+		\item Κοινωνικοποίηση
+		\item Ψυχική ευεξία
+		\item Ατομική ικανοποίηση
+		\item Κοινωνική αναγνώριση
+	\end{itemize}		
+	
+	Όπως αναφέραμε και παραπάνω ο κύκλος της ενασχόλησης (σχήμα \ref{fig:engagement_loop}) ξεκινάει από το κίνητρο. Ένα από τα βασικότερα κίνητρα του ανθρώπου είναι η επιθυμία για κοινωνική αναγνώριση και προβολή \cite{Gamification_on_Participation} την οποία πολλές φορές επιδιώκει να ικανοποιήσει μέσω των κοινωνικών δικτύων (όπως φαίνεται από την παραπάνω λίστα).
+	
+	Ο εφαρμογή που αναπτύξαμε στα πλαίσια της διπλωματικής εργασίας δίνει την δυνατότητα στον εθελοντή (χρήστη) να μοιραστεί στα κοινωνικά δίκτυα τα επιτεύγματα του καθώς και πληροφορίες σε κάθε στάδιο της αιμοδοσίας ικανοποιώντας με αυτό τον τρόπο το αίσθημα της κοινωνικής αναγνώρισης. Συγκεκριμένα υπάρχει άμεση διασύνδεση με το facebook και το twitter στα οποία ο χρήστης ενθαρρύνεται να δημοσιεύσει στις παρακάτω περιπτώσεις:
+	\begin{itemize}
+		\item Όταν λαμβάνει ειδοποίηση για γεγονός αιμοδοσίας, του δίνεται η δυνατότητα να το μοιραστεί στα μέσα κοινωνικής δικτύωσης. Με αυτό τον τρόπο αυξάνεται η προβολή του γεγονότος αιμοδοσίας και κατ'επέκταση οι πιθανότητες να καλυφθούν οι ανάγκες σε αίμα που έχουν τεθεί, ενώ προβάλετε και η ίδια η εφαρμογή το οποίο οδηγεί στην στρατολόγηση περισσότερων εθελοντών αιμοδοτών.
+		\item Όταν ολοκληρώνει κάποια αιμοδοσία ο χρήστης παροτρύνεται να βγάλει φωτογραφία και να την μοιραστεί στα μέσα κοινωνικής δικτύωσης, προάγοντας την αιμοδοσία.
+		\item Όταν ξεκλειδώνει κάποιο έμβλημα.
+	\end{itemize}
+	
+	Επίσης ο χρήστης έχει την δυνατότητα να προσκαλέσει τους φίλους του στην εφαρμογή. Σε αυτό το σημείο πρέπει να αναφερθεί ότι κάθε φορά που ο χρήστης αλληλεπιδρά μέσω της εφαρμογής με τα μέσα κοινωνικής δικτύωσης κερδίζει πόντους σύμφωνα με το σύστημα πόντων όπως περιγράφηκε στο \ref{sssect:point_system} . Αξιοποιώντας την δύναμη των κοινωνικών δικτύων είμαστε σε θέση να δώσουμε μεγαλύτερη προβολή και κοινωνικό χαρακτήρα στην εθελοντική αιμοδοσία. Μετατρέποντας ουσιαστικά τους εθελοντές αιμοδότες σε πρότυπα της εθελοντικής αιμοδοσίας με στόχο την προσέλκυση νέων εθελοντών αιμοδοτών.
 	
 \section{UML diagrams - Σενάρια χρήσης  }
 	Η διαδικασία της μοντελοποίησης, δηλαδή ο αναλυτικός σχεδιασμός ενός συστήματος, πριν από την υλοποίηση του είναι ένα πολύ βασικό στάδιο κατά την ανάπτυξη εφαρμογών. Ένα σύστημα μοντελοποιείται επιτυχώς όταν οι λειτουργικότητες του συστήματος έχουν περιγραφεί πλήρως και ορθώς, έχουν καλυφθεί οι ανάγκες των τελικών χρηστών και υποστηρίζεται η επεκτασιμότητα του συστήματος. 
